--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
- {
-  "extends": ["eslint:recommended", "prettier"],
-  "env": { "browser": true, "node": true, "es6": true },
+{
+  "root": true,
+  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+  "env": {"browser": true, "node": true, "es6": true},
   "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
   "parserOptions": {
     "sourceType": "module",
     "ecmaFeatures": {
@@ -11,8 +13,9 @@
   },
   "rules": {
     "no-var": "error", // var 금지
-    "no-console": ["error", { "allow": ["warn", "error", "info"] }], // console.log() 금지
+    "no-console": ["error", {"allow": ["warn", "error", "info"]}], // console.log() 금지
     "eqeqeq": "error", // 일치 연산자 사용 필수
-    "no-unused-vars": "error" // 사용하지 않는 변수 금지
+    "no-unused-vars": "error", // 사용하지 않는 변수 금지
+    "prettier/prettier": ["error", {"useTabs": true}]
   }
 }
