--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "5.0.0",
     "jest": "^29.6.3",
     "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
